tests/Tuc/Fixtures/errors/EventPostedWithoutACaller.tuc
tuc parse error test
participants
    [InputStream] parts

InputEvent -> [InputStream]
